# retail_customer_cat_using_mcp_poc_version01

./: .gitignore  AI_AGENT_INTEGRATION.md  BRANCH_COMPLETE.md  CLUSTERING_SCRIPTS_UPDATE.md  CLUSTER_EXPORT_IMPLEMENTATION.md  CLUSTER_PROFILE_EXPORT.md  CONFIGURATION_VALIDATION_SUCCESS.md  CONFIG_ENRICHED_FEATURES.md  CONFIG_ENRICHED_FEATURES_TEST_RESULTS.md  CONFIG_FINAL_STATUS.md  CONFIG_FIX.md  CONFIG_KEYERROR_FIX.md  CONFIG_KEY_MAPPING.md  CONFIG_MIGRATION.md  CONFIG_REFERENCE.md  CONFIG_STATUS.md  CONFIG_UPDATE_SUMMARY.md  DATASET_ALIGNMENT_FIX.md  FAKER_INTEGRATION_COMPLETE.md  FUZZY_CONFIG_COMPLETE.md  FUZZY_FEATURES_CONFIG.md  GMM_BUGFIXES.md  GMM_CLUSTERING_ADDED.md  GMM_CLUSTERING_INTEGRATION.md  GMM_CLUSTERING_MODULE.md  GMM_IMPLEMENTATION_COMPLETE.md  GMM_MODULE_ADDITION_SUMMARY.md  GMM_QUICK_REFERENCE.md  HIERARCHY_DOCUMENTATION.md  METRICS_COMPARISON_FIX.md  PERSONA_IMPLEMENTATION_COMPLETE.md  PIPELINE_SUCCESS_REPORT.md  PRODUCT_HIERARCHY.md  PROJECT_STRUCTURE.md  PROJECT_VISION.md  QUICKSTART.md  QUICK_TEST.bat  README.md  README_SETUP.md  RUN_ALL_TESTS.bat  (+15 more)
config/: README.md  config.yml  personas.yml
data/: README.md  customer_sales_data.csv  customer_segments_for_ai.json  customers_with_segments.csv
examples/: README.md  config_example.py  customer_segmentation_analysis.ipynb  export_cluster_profiles.py  generate_customer_data.py  run_gmm_clustering.py  run_segmentation_pipeline.py  test_config.py  test_persona_generation.py  validate_persona_distribution.py  visualize_segments.py
models/: .gitkeep  README.md
notebooks/: 01_data_exploration.ipynb  02_fuzzy_clustering_traditional_ml.ipynb  03_fuzzy_clustering_neural_network.ipynb  README.md
(+41 files in other folders)
